# avs-pcrmv1.0_entroy

./: README.md
source/: CMakeLists.txt
source/app/: CMakeLists.txt
source/app/decoder/: CMakeLists.txt  avs-pcc-dec.cpp
source/app/encoder/: CMakeLists.txt  avs-pcc-enc.cpp
source/app/pc_evalue/: CMakeLists.txt  avs-pcc-pc_evalue.cpp
source/lib/: CMakeLists.txt
source/lib/common/: AttributePredictor.cpp  AttributePredictor.h  CMakeLists.txt  CommonDef.h  ContextModel.h  HighLevelSyntax.h  MD5Sum.cpp  MD5Sum.h  MacroTools.h  PointCloudMortonTable.cpp  PointCloudMortonTable.h  TComBacCore.h  TComBitStream.cpp  TComBitStream.h  TComBufferChunk.cpp  TComBufferChunk.h  TComHashMap.h  TComKdTree.h  TComMath.h  TComMemory.h  TComOccupancyMap.cpp  TComOccupancyMap.h  TComOctree.h  TComParamParser.cpp  TComParamParser.h  TComPcEvalue.cpp  TComPcEvalue.h  TComPointCloud.cpp  TComPointCloud.h  TComResidualStats.cpp  TComResidualStats.h  TComRom.cpp  TComRom.h  TComVector.h  TypeDef.h  contributors.h  nanoflann.hpp  rhHash.h
source/lib/decode/: TDecAttribute.cpp  TDecAttribute.h  TDecBacCore.cpp  TDecBacCore.h  TDecBacTop.cpp  TDecBacTop.h  TDecCfg.cpp  TDecCfg.h  TDecGeometry.cpp  TDecGeometry.h  TDecTop.cpp  TDecTop.h
source/lib/encode/: CMakeLists.txt  TEncAttribute.cpp  TEncAttribute.h  TEncBacCore.cpp  TEncBacCore.h  TEncBacTop.cpp  TEncBacTop.h  TEncCfg.cpp  TEncCfg.h  TEncGeometry.cpp  TEncGeometry.h  TEncTop.cpp  TEncTop.h
